src/components/ColorTokenTable/color-token-table.scss
.color-token-table {
  display: flex;
  flex-direction: column;
}

.color-token-table__theme-switcher {
  position: relative;
  width: 100%;
  height: 3rem;
  margin-bottom: 1.75rem;
  background: $ui-02;

  @media all and (max-width: 1055px) {
    margin-left: 0;
  }

  @media all and (max-width: 671px) {
    max-width: calc(100% - 16px);
    margin-left: 0.5rem;
  }
}

.color-token-table__theme-switcher::before {
  content: '';
  display: block;
  position: absolute;
  top: -16px;
  left: 0;
  width: 100%;
  height: 64px;
  background: $ui-01;
}

.color-token-table__theme-switcher--stuck {
  box-shadow: 0px 2px 6px 0px rgba($carbon--black-100, 0.2); //adds box shadow once it hits scrolling content
}

.color-token-table__theme-switcher
  .bx--content-switcher-btn:not(.bx--content-switcher--selected) {
  background-color: $ui-02;
  color: $text-01;

  &:hover {
    background-color: #e5e5e5; // $hover-ui
  }
}

.color-token-table__theme-switcher .bx--content-switcher-btn {
  padding: $spacing-03 $spacing-07 $spacing-03 $spacing-05;
  flex: 1;
  border-radius: 0;
  height: 3rem;

  @include carbon--breakpoint('sm') {
    padding-right: $spacing-05;
  }

  @include carbon--breakpoint('md') {
    padding-right: 4rem;
  }
}

.color-token-table__theme-switcher
  .bx--content-switcher-btn:not(:last-of-type)::after {
  height: 24px;
  right: -1px;
  top: 12px;
}

.color-token-value {
  display: flex;
  justify-content: space-between;
}

.color-token-value .bx--overflow-menu {
  margin-left: $spacing-03;
}

.color-token-value .bx--overflow-menu-options {
  left: -9.25rem;
  top: $spacing-07;
}

.color-token-value .bx--overflow-menu__icon {
  width: rem(12px);
  height: rem(12px);
}

.color-token-value > div {
  display: flex;

  @media all and (max-width: 580px) {
    position: absolute;
    right: $spacing-05;
    top: $spacing-05;
  }
}

.color-token-value__block {
  display: block;
  width: rem(48px);
  height: rem(48px);
  border-radius: rem(48px);

  @media all and (max-width: 672px) {
    width: rem(32px);
    height: rem(32px);
    border-radius: rem(32px);
  }

  @media all and (max-width: 580px) {
    width: rem(48px);
    height: rem(48px);
    border-radius: rem(48px);
  }
}

.color-token-table .page-table {
  background: $ui-02;
  margin-top: $spacing-03;
  width: calc(100%);
}

.color-token-table .page-table thead tr {
  border-bottom: 1px solid $carbon--gray-20;
  display: flex;

  @media all and (max-width: 580px) {
    display: none;
  }
}

.color-token-table .page-table thead tr th {
  flex: 1;
  flex-basis: calc(100% / 3);
}

.color-token-table .page-table tbody tr {
  display: flex;
  border-bottom: 1px solid $carbon--gray-20;
  min-height: rem(104px);

  @media all and (max-width: 580px) {
    flex-direction: column;
    height: auto;
    position: relative;
  }
}

.color-token-table .page-table tbody tr:last-child {
  border-bottom: none;
}

.color-token-table .page-table tbody tr td {
  flex: 1;
  flex-basis: calc(100% / 3);

  &:last-child {
    padding-right: $spacing-03;
  }
}

.color-token-table .page-table tbody tr td:not(:last-child) {
  border-right: 1px solid $carbon--gray-20;
}

